--- a/spec/fixtures/vcr_cassettes/TriannonClientDELETE/_delete_annotation/without_authentication/behaves_like_delete_annotations/validates_the_annotation_ID.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientDELETE/_delete_annotation/without_authentication/behaves_like_delete_annotations/validates_the_annotation_ID.yml
@@ -1,8 +1,8 @@
 ---
 http_interactions:
 - request:
-    method: get
-    uri: http://localhost:3000/annotations/bar/19515c3c-3ab0-42d5-94ed-9dad0e6c0735
+    method: delete
+    uri: http://localhost:3000/annotations/foo/checking_anno_id
     body:
       encoding: US-ASCII
       string: ''
@@ -31,24 +31,26 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - b42fe723-cf13-460d-a52e-ea92b81109de
+      - 29eff20d-835b-4be1-8b57-82689f0784d9
       X-Runtime:
-      - '0.022414'
+      - '0.021631'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 31 Jul 2015 20:48:05 GMT
+      - Fri, 31 Jul 2015 20:47:26 GMT
       Content-Length:
-      - '1494'
+      - '1454'
       Connection:
       - Keep-Alive
+      Set-Cookie:
+      - request_method=DELETE; path=/
     body:
       encoding: UTF-8
-      string: "<h2>error getting bar/19515c3c-3ab0-42d5-94ed-9dad0e6c0735 from LDP</h2><html>\n<head>\n<meta
+      string: "<h2>error getting foo/checking_anno_id from LDP</h2><html>\n<head>\n<meta
         http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error
         404 Not Found</title>\n</head>\n<body><h2>HTTP ERROR 404</h2>\n<p>Problem
-        accessing /fedora/rest/anno/bar/19515c3c-3ab0-42d5-94ed-9dad0e6c0735. Reason:\n<pre>
-        \   Not Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>
+        accessing /fedora/rest/anno/foo/checking_anno_id. Reason:\n<pre>    Not Found</pre></p><hr
+        /><i><small>Powered by Jetty://</small></i><br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -58,7 +60,7 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
-        \                                               \n<br/>                                                \n\n</body>\n</html>\n"
+        \                                               \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 20:48:05 GMT
+  recorded_at: Fri, 31 Jul 2015 20:47:26 GMT
 recorded_with: VCR 2.9.3
