--- a/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/gets_an_open_annotation_by_ID_with_content_type_application/rdf_xml_.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/gets_an_open_annotation_by_ID_with_content_type_application/rdf_xml_.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/annotations/bar/%2F93%2Ff9%2F75%2F01%2F93f97501-68d8-4acf-a2b0-07091ba079f4
+    uri: http://localhost:3000/annotations/bar/%2F72%2F72%2F7b%2F30%2F72727b30-91eb-4eef-b936-97dc05cb5893
     body:
       encoding: US-ASCII
       string: ''
@@ -29,17 +29,17 @@ http_interactions:
       Content-Type:
       - application/rdf+xml; charset=utf-8
       Etag:
-      - W/"ecfcc3e2c36143dff40faa57d1fbf421"
+      - W/"c827904aed6070371aef140c74d3d389"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 3acf6baf-f4ef-47ac-ac0b-e77dc5ca61c0
+      - 72c1834e-8831-4022-8371-ca939129463a
       X-Runtime:
-      - '0.157165'
+      - '0.148070'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 31 Jul 2015 00:18:53 GMT
+      - Fri, 31 Jul 2015 20:48:07 GMT
       Content-Length:
       - '913'
       Connection:
@@ -49,9 +49,9 @@ http_interactions:
       string: |
         <?xml version='1.0' encoding='utf-8' ?>
         <rdf:RDF xmlns:cnt='http://www.w3.org/2011/content#' xmlns:dc11='http://purl.org/dc/elements/1.1/' xmlns:dcmitype='http://purl.org/dc/dcmitype/' xmlns:oa='http://www.w3.org/ns/oa#' xmlns:rdf='http://www.w3.org/1999/02/22-rdf-syntax-ns#'>
-          <oa:Annotation rdf:about='http://your.triannon-server.com/annotations/bar/93/f9/75/01/93f97501-68d8-4acf-a2b0-07091ba079f4'>
+          <oa:Annotation rdf:about='http://your.triannon-server.com/annotations/bar/72/72/7b/30/72727b30-91eb-4eef-b936-97dc05cb5893'>
             <oa:hasBody>
-              <dcmitype:Text rdf:nodeID='g70334248974140'>
+              <dcmitype:Text rdf:nodeID='g70067821983280'>
                 <rdf:type rdf:resource='http://www.w3.org/2011/content#ContentAsText'></rdf:type>
                 <dc11:format>text/plain</dc11:format>
                 <dc11:language>en</dc11:language>
@@ -64,5 +64,5 @@ http_interactions:
 
         </rdf:RDF>
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 00:18:53 GMT
+  recorded_at: Fri, 31 Jul 2015 20:48:07 GMT
 recorded_with: VCR 2.9.3
