--- a/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/gets_an_open_annotation_by_ID_with_content_type_application/x-turtle_.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/gets_an_open_annotation_by_ID_with_content_type_application/x-turtle_.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/annotations/bar/%2F93%2Ff9%2F75%2F01%2F93f97501-68d8-4acf-a2b0-07091ba079f4
+    uri: http://localhost:3000/annotations/bar/%2F72%2F72%2F7b%2F30%2F72727b30-91eb-4eef-b936-97dc05cb5893
     body:
       encoding: US-ASCII
       string: ''
@@ -29,17 +29,17 @@ http_interactions:
       Content-Type:
       - application/x-turtle; charset=utf-8
       Etag:
-      - W/"568506f8a6e5b9ff582c962814270773"
+      - W/"f2baca91ccc1751a41024d7ab63bb5ad"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - fbe3aa64-df11-48b1-9926-99105347db4e
+      - 9fae2174-4143-4fbc-a5bb-b7d848b0e37a
       X-Runtime:
-      - '0.177077'
+      - '0.172853'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 31 Jul 2015 00:18:54 GMT
+      - Fri, 31 Jul 2015 20:48:08 GMT
       Content-Length:
       - '667'
       Connection:
@@ -54,7 +54,7 @@ http_interactions:
         @prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
         @prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
 
-        <http://your.triannon-server.com/annotations/bar/93/f9/75/01/93f97501-68d8-4acf-a2b0-07091ba079f4> a oa:Annotation;
+        <http://your.triannon-server.com/annotations/bar/72/72/7b/30/72727b30-91eb-4eef-b936-97dc05cb5893> a oa:Annotation;
            oa:hasBody [
              a dcmitype:Text,
                cnt:ContentAsText;
@@ -65,5 +65,5 @@ http_interactions:
            oa:hasTarget <http://purl.stanford.edu/kq131cs7229>;
            oa:motivatedBy oa:commenting .
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 00:18:54 GMT
+  recorded_at: Fri, 31 Jul 2015 20:48:08 GMT
 recorded_with: VCR 2.9.3
